--- a/helm-charts/hello-api/values.yaml
+++ b/helm-charts/hello-api/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: fra.ocir.io/fruktknlrefu/hello-api
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
