--- a/helm-charts/hello-api/values.yaml
+++ b/helm-charts/hello-api/values.yaml
@@ -1,13 +1,8 @@
-# Default values for hello-api.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
 image:
   repository: fra.ocir.io/fruktknlrefu/hello-api
   pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
 imagePullSecrets: []
@@ -15,12 +10,8 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
 
 podAnnotations: {}
@@ -41,11 +32,12 @@ service:
   port: 3000
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
     # kubernetes.io/tls-acme: "true"
+    # https://github.com/oracle/oci-cloud-controller-manager
   hosts:
     - host: chart-example.local
       paths:
