--- a/helm-charts/hello-api/Chart.yaml
+++ b/helm-charts/hello-api/Chart.yaml
@@ -9,6 +9,9 @@ version: 0.1.0
 appVersion: "latest"
 
 dependencies:
-  - name: ingress-nginx/ingress-nginx
-    repository: https://kubernetes.github.io/ingress-nginx
+  - name: ingress-nginx
+    repository: "https://kubernetes.github.io/ingress-nginx"
     version: 4.0.19
+  - name: oci-la-fluentd
+    repository: "file://dependencies/oci-la-fluentd"
+    version: 1.0.1
