Upgrade new fluentd config and README

--- a/helm-charts/hello-api/values.yaml
+++ b/helm-charts/hello-api/values.yaml
@@ -14,12 +14,15 @@ serviceAccount:
   annotations: {}
   name: ""
 
-podAnnotations: {}
+podAnnotations:
+  "oracle.com/oci_la_log_source_name": "hello-api-source"
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
